@@ -223,6 +223,7 @@ If \fItaskset\fR is given, the output is compatible with the taskset program
 
 This option has no impact on the format of input CPU set strings,
 hwloc, list and taskset formats are always accepted.
+In case of ambiguity, use \fBhwloc-calc --cpuset-input-format\fR.
 .TP
 \fB\-f\fR \fB\-\-force\fR
 Launch the executable even if binding failed.
